Fix styling error causing information to overlap with next image on smaller devices

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -316,7 +316,7 @@ $map-bar: #63859c;
 
 .place-wrapper {
     margin: 0px auto;
-    height: 200px;
+    height: 250px;
 }
 
 .info-wrapper {
